--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,1 +1,23 @@
-<p>home works!</p>
+<div class="jumbotron text-center">
+  <h1>MEAN Authentication App</h1>
+  <p class="lead">Welcome to our custom MEAN Authentication application built from scratch</p>
+  <div>
+    <a class="btn btn-primary mr-4" [routerLink]="['/register']">Register</a>
+    <a class="btn btn-dark mr-4" [routerLink]="['/login']">Login</a>
+  </div>
+</div>
+
+<div class="container-fluid text-center row">
+  <div class="col-md-4">
+    <h3>Express Backend</h3>
+    <p>A rock solid Node.js/Express server using Mongoose to organize models and query a MongoDB database</p>
+  </div>
+  <div class="col-md-4">
+    <h3>Angular CLI</h3>
+    <p>Angular-CLI to generate components, services and more. Local dev server and easy compilation</p>
+  </div>
+  <div class="col-md-4">
+    <h3>JWT Tokens</h3>
+    <p>Full featured authentication using JSON Web Tokens. Login and store user data</p>
+  </div>
+</div>
