--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -1,1 +1,55 @@
-<p>register works!</p>
+<div class="container row-cols-2 m-4">
+<form (submit)="onSubmit(registerForm.value)" #registerForm="ngForm">
+  <fieldset>
+    <legend>Register</legend>
+  <div class="form-group">
+    <label for="name">Name</label>
+    <input
+      [(ngModel)]="name"
+      type="text"
+      name="name"
+      id="name"
+      class="form-control"
+      placeholder="name"
+    />
+  </div>
+
+  <div class="form-group">
+    <label for="username">Username</label>
+    <input
+      [(ngModel)]="username"
+      type="text"
+      name="username"
+      id="username"
+      class="form-control"
+      placeholder="username"
+    />
+
+    <label for="E-mail">E-mail</label>
+    <input
+      [(ngModel)]="email"
+      type="text"
+      name="E-mail"
+      id="E-mail"
+      class="form-control"
+      placeholder="E-mail"
+      aria-describedby="helpId"
+    />
+  </div>
+
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input
+      [(ngModel)]="password"
+      type="password"
+      class="form-control"
+      name="password"
+      id="password"
+      placeholder="password"
+    />
+  </div>
+
+  <button type="submit" class="btn btn-primary">Log In</button>
+  </fieldset>
+</form>
+</div>
