flash messages added

--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="container row-cols-2 m-4">
-<form (submit)="onSubmit(registerForm.value)" #registerForm="ngForm">
+<form (submit)="onSubmit()" #registerForm="ngForm">
   <fieldset>
     <legend>Register</legend>
   <div class="form-group">
