--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,6 +1,8 @@
 <div class="jumbotron text-center">
   <h1>MEAN Authentication App</h1>
-  <p class="lead">Welcome to our custom MEAN Authentication application built from scratch</p>
+  <p class="lead">
+    Welcome to our custom MEAN Authentication application built from scratch
+  </p>
   <div>
     <a class="btn btn-primary mr-4" [routerLink]="['/register']">Register</a>
     <a class="btn btn-dark mr-4" [routerLink]="['/login']">Login</a>
@@ -10,14 +12,23 @@
 <div class="container-fluid text-center row">
   <div class="col-md-4">
     <h3>Express Backend</h3>
-    <p>A rock solid Node.js/Express server using Mongoose to organize models and query a MongoDB database</p>
+    <p>
+      A rock solid Node.js/Express server using Mongoose to organize models and
+      query a MongoDB database
+    </p>
   </div>
   <div class="col-md-4">
     <h3>Angular CLI</h3>
-    <p>Angular-CLI to generate components, services and more. Local dev server and easy compilation</p>
+    <p>
+      Angular-CLI to generate components, services and more. Local dev server
+      and easy compilation
+    </p>
   </div>
   <div class="col-md-4">
     <h3>JWT Tokens</h3>
-    <p>Full featured authentication using JSON Web Tokens. Login and store user data</p>
+    <p>
+      Full featured authentication using JSON Web Tokens. Login and store user
+      data
+    </p>
   </div>
 </div>
