--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -1,1 +1,32 @@
-<p>login works!</p>
+<div class="container row-cols-2 m-4">
+  <form (submit)="onSubmit()" #loginForm="ngForm">
+    <fieldset>
+      <legend>Login</legend>
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input
+          [(ngModel)]="username"
+          type="text"
+          name="username"
+          id="username"
+          class="form-control"
+          placeholder="username"
+        />
+      </div>
+
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input
+          [(ngModel)]="password"
+          type="password"
+          class="form-control"
+          name="password"
+          id="password"
+          placeholder="password"
+        />
+      </div>
+
+      <button type="submit" class="btn btn-primary">Log In</button>
+    </fieldset>
+  </form>
+</div>
