--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -24,7 +24,8 @@
           class="form-control"
           placeholder="username"
         />
-
+      </div>
+      <div class="form-group">
         <label for="E-mail">E-mail</label>
         <input
           [(ngModel)]="email"
