--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -50,7 +50,7 @@
         />
       </div>
 
-      <button type="submit" class="btn btn-primary">Log In</button>
+      <button type="submit" class="btn btn-primary">Register</button>
     </fieldset>
   </form>
 </div>
